# osm2rdf

./: .dockerignore  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  Makefile  README.md  cpplint.py
.github/workflows/: build-image.yml  docker-build-bz2.yml  docker-build-gz.yml  docker-build-stdout.yml  docker-build-uncompressed.yml  docker-build.yml  docker-publish.yml  native-build.yml
apps/: CMakeLists.txt  osm2rdf-stats.cpp  osm2rdf.cpp  osm2ttl-maxid.cpp  osm2ttl-stats.cpp  osm2ttl.cpp
benchmarks/: Baselines.cpp  CMakeLists.txt  DirectedAcyclicGraph.cpp  DirectedGraph.cpp  GeometryHandler.cpp  OpenMP.cpp  Writer.cpp  benchmarks.cpp
benchmarks/ttl/: Writer.cpp
benchmarks/util/: DirectedAcyclicGraph.cpp  DirectedGraph.cpp
cmake/: FindBoostAssert.cmake  FindBoostConfig.cmake  FindBoostContainerHash.cmake  FindBoostCore.cmake  FindBoostMPL.cmake  FindBoostStaticAssert.cmake  FindBoostThrowException.cmake  FindBoostTypeIndex.cmake  FindBoostTypeTraits.cmake  FindBoostVariant.cmake  FindOsmium.cmake  FindPOPL.cmake  FindProtozero.cmake
include/osm2rdf/: Version.h.in
include/osm2rdf/config/: Config.h  Constants.h  ExitCode.h
include/osm2rdf/geometry/: Area.h  Box.h  Global.h  Linestring.h  Location.h  MultiPolygon.h  Node.h  Polygon.h  Relation.h  Ring.h  Way.h
include/osm2rdf/osm/: Area.h  Box.h  Changeset.h  Constants.h  CountHandler.h  DenseMemIndex.h  FactHandler.h  Generic.h  GeometryCache.h  GeometryHandler.h  Location.h  LocationHandler.h  Node.h  NodeLocationsForWays.h  OsmiumHandler.h  Relation.h  RelationHandler.h  RelationMember.h  Tag.h  TagList.h  Way.h
include/osm2rdf/ttl/: Constants.h  Format.h  Writer.h
include/osm2rdf/util/: CacheFile.h  DirectedAcyclicGraph.h  DirectedGraph.h  Output.h  OutputMergeMode.h  ProgressBar.h  Ram.h  Time.h  Timer.h  Timing.h
include/osm2ttl/: Version.h.in
include/osm2ttl/config/: Config.h  Constants.h  ExitCode.h
src/: CMakeLists.txt
src/config/: Config.cpp
src/osm/: Area.cpp  AreaHandler.cpp  Box.cpp  Changeset.cpp  CountHandler.cpp  DenseMemIndex.cpp  DumpHandler.cpp  FactHandler.cpp  GeometryCache.cpp  GeometryHandler.cpp  LocationHandler.cpp  Node.cpp  OsmiumHandler.cpp  Relation.cpp  RelationHandler.cpp  RelationMember.cpp  TagList.cpp  Way.cpp
src/osm2nt/: CMakeLists.txt  OSM2NTMain.cpp  _config.h.in
src/osm2nt/config/: Config.cpp  Config.h  ConfigParser.cpp  ConfigParser.h
src/osm2nt/nt/: BlankNode.cpp  BlankNode.h  BlankNodeLabel.cpp  BlankNodeLabel.h  IRI.cpp  IRI.h  LangTag.cpp  LangTag.h  Literal.cpp  Literal.h  Object.cpp  Object.h  OutputFormat.h  Predicate.cpp  Predicate.h  Subject.cpp  Subject.h  Triple.cpp  Triple.h  Writer.cpp  Writer.h
src/osm2nt/osm/: DumpHandler.cpp  DumpHandler.h  Element.cpp  Element.h  ElementStack.cpp  ElementStack.h  MergeMode.h  SimplifyingWKTFactory.cpp  SimplifyingWKTFactory.h
src/osm2ttl/: CMakeLists.txt  OSM2TTLMain.cpp
src/osm2ttl/config/: Config.cpp  Config.h
src/osm2ttl/geometry/: Linestring.h  Location.h  MultiPolygon.h  Polygon.h
src/osm2ttl/osm/: Area.cpp  Area.h  AreaHandler.cpp  AreaHandler.h  AreaStack.cpp  AreaStack.h  CacheFile.cpp  CacheFile.h  DumpHandler.cpp  DumpHandler.h  Element.cpp  Element.h  ElementStack.cpp  ElementStack.h  LocationHandler.cpp  LocationHandler.h  MembershipHandler.cpp  MembershipHandler.h  Node.cpp  Node.h  RelationMember.cpp  RelationMember.h  Ring.cpp  Ring.h  SimplifyingWKTFactory.cpp  SimplifyingWKTFactory.h  Tag.h  TagList.cpp  WKTFactory.cpp  WKTFactory.h  Way.cpp
src/osm2ttl/ttl/: BlankNode.cpp  BlankNode.h  IRI.cpp  IRI.h  LangTag.cpp  Literal.cpp  OutputFormat.cpp  OutputFormat.h  Writer.cpp  Writer.h
src/osm2ttl/util/: CacheFile.cpp  DispatchQueue.cpp  DispatchQueue.h  Queue.h  Ram.h
src/ttl/: IRI.cpp  OutputFormat.cpp  Writer.cpp
src/util/: CacheFile.cpp  DirectedGraph.cpp  DispatchQueue.cpp  Output.cpp  ProgressBar.cpp  Queue.cpp  Ram.cpp
stats/: analyse.go  go.mod
tests/: Area.cpp  Baseline.cpp  CMakeLists.txt  DirectedAcyclicGraph.cpp  DirectedGraph.cpp  E2E.cpp  GeometryHandler.cpp  Node.cpp  Relation.cpp  Way.cpp  Writer.cpp  test1.cpp
tests/config/: Config.cpp
tests/e2e/: download.py  n1137213227.xml  n1137213231.xml  n1137213233.xml  n1137213234.xml  n1137213236.xml  n1137213242.xml  n1137213243.xml  n1137213247.xml  n1137724103.xml  n2110601105.xml  n5190342871.xml
tests/e2e/building_51/: node001137213226.xml  node001137213228.xml  node001137213244.xml  node001137213246.xml  node001137213249.xml  node001137213251.xml  node001137724108.xml  node002110601134.xml  way000098284318.xml
tests/e2e/tf/: node000027589962.xml  node000027589963.xml  node000027589964.xml  node000027589965.xml  node000027589966.xml  node000027589975.xml  node001375363516.xml  node001375363542.xml  node002110601090.xml  node002110601099.xml  node002110601128.xml  node002504361866.xml  node003584328855.xml  node003584328875.xml  node003584334881.xml  node003584334882.xml  node003584334883.xml  node003584334885.xml  node003584334890.xml  node003584336194.xml  node003584336195.xml  node003584336196.xml  node003584336197.xml  node003584336198.xml  node003584336200.xml  node004515157612.xml  node005582041562.xml  node006219181286.xml  node006219181287.xml  node006818253794.xml  node006818253796.xml  node006818253814.xml  node006818253815.xml  node007141819604.xml  node007141819605.xml  node007535538869.xml  node007900221721.xml  node007900221725.xml  node008085761351.xml  node008085761353.xml  (+6 more)
tests/geometry/: Area.cpp  Box.cpp  Linestring.cpp  Location.cpp  MultiPolygon.cpp  Node.cpp  Polygon.cpp  Relation.cpp  Ring.cpp  Way.cpp
tests/issues/: Issue15.cpp  Issue24.cpp  Issue28.cpp  issue15_osmrel_8291361.xml  issue15_osmway_201387026.xml
tests/osm/: Area.cpp  Box.cpp  DumpHandler.cpp  FactHandler.cpp  Generic.cpp  GeometryHandler.cpp  Node.cpp  OsmiumHandler.cpp  Relation.cpp  RelationMember.cpp  TagList.cpp  Way.cpp
tests/ttl/: Writer-Grammar.cpp  Writer.cpp
tests/util/: CacheFile.cpp  DirectedAcyclicGraph.cpp  DirectedGraph.cpp  Output.cpp  ProgressBar.cpp  Time.cpp
(+42 files in other folders)
